Final commit before 2/27 meeting with DK

--- a/SLMD.ipynb
+++ b/SLMD.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "corporate-converter",
+   "id": "accredited-driver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "contained-purse",
+   "id": "polyphonic-underground",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,9 +52,59 @@
     "\n",
     "url = # One of above url's\n",
     "\n",
+    "# Note from Patrick: Stopped here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "renewable-allen",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# this is the HTML from the given URL\n",
     "html = urlopen(url)\n",
     "soup = BeautifulSoup(html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "raised-conjunction",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use findALL() to get the column headers\n",
+    "soup.findAll('tr', limit=2)\n",
+    "# use getText()to extract the text we need into a list\n",
+    "headers = [th.getText() for th in soup.findAll('tr', limit=2)[0].findAll('th')]\n",
+    "# exclude the first column as we will not need the ranking order from Basketball Reference for the analysis\n",
+    "headers = headers[1:]\n",
+    "headers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "crazy-graphic",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# avoid the first header row\n",
+    "rows = soup.findAll('tr')[1:]\n",
+    "player_stats = [[td.getText() for td in rows[i].findAll('td')]\n",
+    "            for i in range(len(rows))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "appointed-jefferson",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = pd.DataFrame(player_stats, columns = headers)\n",
+    "stats.head(10)"
    ]
   }
  ],
