--- a/SLMD.ipynb
+++ b/SLMD.ipynb
@@ -3,20 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "accredited-driver",
+   "id": "approved-rocket",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import packages\n",
     "from urllib.request import urlopen\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "# following library will all;ow us to scrape height, weight, import re"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polyphonic-underground",
+   "id": "amazing-mitchell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "renewable-allen",
+   "id": "further-supervision",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "raised-conjunction",
+   "id": "twelve-clear",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "crazy-graphic",
+   "id": "romantic-miller",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "appointed-jefferson",
+   "id": "informative-robert",
    "metadata": {},
    "outputs": [],
    "source": [
