Added Missing Games to Both dbs

--- a/notebooks/Data Cleaning.ipynb
+++ b/notebooks/Data Cleaning.ipynb
@@ -1839,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1851,17 +1851,380 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>home_abbv</th>\n",
+       "      <th>away_abbv</th>\n",
+       "      <th>date</th>\n",
+       "      <th>game_id</th>\n",
+       "      <th>season</th>\n",
+       "      <th>game_code</th>\n",
+       "      <th>team</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>home_team_bin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2633</th>\n",
+       "      <td>POR</td>\n",
+       "      <td>MEM</td>\n",
+       "      <td>2020-08-15 14:30:00</td>\n",
+       "      <td>1285591.0</td>\n",
+       "      <td>19-20</td>\n",
+       "      <td>202008150POR</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2428</th>\n",
+       "      <td>BRK</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>2020-12-22 19:00:00</td>\n",
+       "      <td>1346026.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202012220BRK</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2441</th>\n",
+       "      <td>LAL</td>\n",
+       "      <td>LAC</td>\n",
+       "      <td>2020-12-22 22:00:00</td>\n",
+       "      <td>1346031.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202012220LAL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2409</th>\n",
+       "      <td>BOS</td>\n",
+       "      <td>MIL</td>\n",
+       "      <td>2020-12-23 19:30:00</td>\n",
+       "      <td>1346036.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202012230BOS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2444</th>\n",
+       "      <td>CHI</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>2020-12-23 20:00:00</td>\n",
+       "      <td>1347621.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202012230CHI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2460</th>\n",
+       "      <td>CLE</td>\n",
+       "      <td>CHO</td>\n",
+       "      <td>2020-12-23 19:00:00</td>\n",
+       "      <td>1347596.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202012230CLE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2421</th>\n",
+       "      <td>DEN</td>\n",
+       "      <td>SAC</td>\n",
+       "      <td>2020-12-23 21:00:00</td>\n",
+       "      <td>1347641.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202012230DEN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2457</th>\n",
+       "      <td>IND</td>\n",
+       "      <td>NYK</td>\n",
+       "      <td>2020-12-23 19:00:00</td>\n",
+       "      <td>1347601.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202012230IND</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2402</th>\n",
+       "      <td>MEM</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>2020-12-23 20:00:00</td>\n",
+       "      <td>1347631.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202012230MEM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2400</th>\n",
+       "      <td>MIN</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>2020-12-23 20:00:00</td>\n",
+       "      <td>1347636.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202012230MIN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2410</th>\n",
+       "      <td>ORL</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>2020-12-23 19:00:00</td>\n",
+       "      <td>1347606.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202012230ORL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2401</th>\n",
+       "      <td>PHI</td>\n",
+       "      <td>WAS</td>\n",
+       "      <td>2020-12-23 19:00:00</td>\n",
+       "      <td>1347611.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202012230PHI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2406</th>\n",
+       "      <td>PHO</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>2020-12-23 22:30:00</td>\n",
+       "      <td>1346041.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202012230PHO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2405</th>\n",
+       "      <td>POR</td>\n",
+       "      <td>UTA</td>\n",
+       "      <td>2020-12-23 22:00:00</td>\n",
+       "      <td>1349671.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202012230POR</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>303</th>\n",
+       "      <td>BOS</td>\n",
+       "      <td>WAS</td>\n",
+       "      <td>2021-05-18 21:00:00</td>\n",
+       "      <td>1412496.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202105180BOS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>290</th>\n",
+       "      <td>IND</td>\n",
+       "      <td>CHO</td>\n",
+       "      <td>2021-05-18 18:30:00</td>\n",
+       "      <td>1412491.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202105180IND</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>LAL</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>2021-05-19 22:00:00</td>\n",
+       "      <td>1412506.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202105190LAL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>312</th>\n",
+       "      <td>MEM</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>2021-05-19 19:30:00</td>\n",
+       "      <td>1412501.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202105190MEM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>291</th>\n",
+       "      <td>WAS</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>2021-05-20 20:00:00</td>\n",
+       "      <td>1412811.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202105200WAS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>GSW</td>\n",
+       "      <td>MEM</td>\n",
+       "      <td>2021-05-21 21:00:00</td>\n",
+       "      <td>1412961.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>202105210GSW</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     home_abbv away_abbv                date    game_id season     game_code  \\\n",
+       "2633       POR       MEM 2020-08-15 14:30:00  1285591.0  19-20  202008150POR   \n",
+       "2428       BRK       GSW 2020-12-22 19:00:00  1346026.0   None  202012220BRK   \n",
+       "2441       LAL       LAC 2020-12-22 22:00:00  1346031.0   None  202012220LAL   \n",
+       "2409       BOS       MIL 2020-12-23 19:30:00  1346036.0   None  202012230BOS   \n",
+       "2444       CHI       ATL 2020-12-23 20:00:00  1347621.0   None  202012230CHI   \n",
+       "2460       CLE       CHO 2020-12-23 19:00:00  1347596.0   None  202012230CLE   \n",
+       "2421       DEN       SAC 2020-12-23 21:00:00  1347641.0   None  202012230DEN   \n",
+       "2457       IND       NYK 2020-12-23 19:00:00  1347601.0   None  202012230IND   \n",
+       "2402       MEM       SAS 2020-12-23 20:00:00  1347631.0   None  202012230MEM   \n",
+       "2400       MIN       DET 2020-12-23 20:00:00  1347636.0   None  202012230MIN   \n",
+       "2410       ORL       MIA 2020-12-23 19:00:00  1347606.0   None  202012230ORL   \n",
+       "2401       PHI       WAS 2020-12-23 19:00:00  1347611.0   None  202012230PHI   \n",
+       "2406       PHO       DAL 2020-12-23 22:30:00  1346041.0   None  202012230PHO   \n",
+       "2405       POR       UTA 2020-12-23 22:00:00  1349671.0   None  202012230POR   \n",
+       "303        BOS       WAS 2021-05-18 21:00:00  1412496.0   None  202105180BOS   \n",
+       "290        IND       CHO 2021-05-18 18:30:00  1412491.0   None  202105180IND   \n",
+       "298        LAL       GSW 2021-05-19 22:00:00  1412506.0   None  202105190LAL   \n",
+       "312        MEM       SAS 2021-05-19 19:30:00  1412501.0   None  202105190MEM   \n",
+       "291        WAS       IND 2021-05-20 20:00:00  1412811.0   None  202105200WAS   \n",
+       "361        GSW       MEM 2021-05-21 21:00:00  1412961.0   None  202105210GSW   \n",
+       "\n",
+       "     team home_team  home_team_bin  \n",
+       "2633  NaN       NaN            NaN  \n",
+       "2428  NaN       NaN            NaN  \n",
+       "2441  NaN       NaN            NaN  \n",
+       "2409  NaN       NaN            NaN  \n",
+       "2444  NaN       NaN            NaN  \n",
+       "2460  NaN       NaN            NaN  \n",
+       "2421  NaN       NaN            NaN  \n",
+       "2457  NaN       NaN            NaN  \n",
+       "2402  NaN       NaN            NaN  \n",
+       "2400  NaN       NaN            NaN  \n",
+       "2410  NaN       NaN            NaN  \n",
+       "2401  NaN       NaN            NaN  \n",
+       "2406  NaN       NaN            NaN  \n",
+       "2405  NaN       NaN            NaN  \n",
+       "303   NaN       NaN            NaN  \n",
+       "290   NaN       NaN            NaN  \n",
+       "298   NaN       NaN            NaN  \n",
+       "312   NaN       NaN            NaN  \n",
+       "291   NaN       NaN            NaN  \n",
+       "361   NaN       NaN            NaN  "
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df[merged_df.home_team.isnull()].sort_values(['game_code'])[lambda x: x.date < dt.datetime(2021, 10, 17)]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(960904, 26)"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_player_basic.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "engine = sql.create_engine(\"sqlite:///../data/interim/NBA.db\")\n",
+    "conn = engine.connect()\n",
+    "df_player_basic= pd.read_sql(\"SELECT * FROM basic_stats\", con=conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
+   ]
   },
   {
    "cell_type": "code",
