Added Website Goals and Final Missing OddsShark Links

--- a/notebooks/Data Cleaning.ipynb
+++ b/notebooks/Data Cleaning.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,16 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5131, 4)"
+       "(5133, 4)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -606,17 +606,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>17-18</th>\n",
-       "      <td>1369</td>\n",
-       "      <td>1369</td>\n",
-       "      <td>1369</td>\n",
-       "      <td>1369</td>\n",
+       "      <td>1370</td>\n",
+       "      <td>1370</td>\n",
+       "      <td>1370</td>\n",
+       "      <td>1370</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18-19</th>\n",
-       "      <td>1318</td>\n",
-       "      <td>1318</td>\n",
-       "      <td>1318</td>\n",
-       "      <td>1318</td>\n",
+       "      <td>1319</td>\n",
+       "      <td>1319</td>\n",
+       "      <td>1319</td>\n",
+       "      <td>1319</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19-20</th>\n",
@@ -646,14 +646,14 @@
       "text/plain": [
        "        home_abbv  away_abbv  date  game_id\n",
        "season                                     \n",
-       "17-18        1369       1369  1369     1369\n",
-       "18-19        1318       1318  1318     1318\n",
+       "17-18        1370       1370  1370     1370\n",
+       "18-19        1319       1319  1319     1319\n",
        "19-20        1144       1144  1144     1144\n",
        "20-21        1182       1182  1182     1182\n",
        "21-22         118        118   118      118"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1467,43 +1467,43 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69899</th>\n",
-       "      <td>IND</td>\n",
-       "      <td>202012230IND</td>\n",
-       "      <td>IND</td>\n",
+       "      <th>69997</th>\n",
+       "      <td>MEM</td>\n",
+       "      <td>202105190MEM</td>\n",
+       "      <td>MEM</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69906</th>\n",
-       "      <td>MIA</td>\n",
-       "      <td>202012230ORL</td>\n",
-       "      <td>ORL</td>\n",
+       "      <th>70004</th>\n",
+       "      <td>MEM</td>\n",
+       "      <td>202105210GSW</td>\n",
+       "      <td>GSW</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69913</th>\n",
-       "      <td>ORL</td>\n",
-       "      <td>202012230ORL</td>\n",
-       "      <td>ORL</td>\n",
+       "      <th>70012</th>\n",
+       "      <td>GSW</td>\n",
+       "      <td>202105210GSW</td>\n",
+       "      <td>GSW</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69920</th>\n",
-       "      <td>SAS</td>\n",
-       "      <td>202012230MEM</td>\n",
+       "      <th>70020</th>\n",
        "      <td>MEM</td>\n",
+       "      <td>202008150POR</td>\n",
+       "      <td>POR</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69927</th>\n",
-       "      <td>MEM</td>\n",
-       "      <td>202012230MEM</td>\n",
-       "      <td>MEM</td>\n",
+       "      <th>70027</th>\n",
+       "      <td>POR</td>\n",
+       "      <td>202008150POR</td>\n",
+       "      <td>POR</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9902 rows × 4 columns</p>\n",
+       "<p>9916 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1514,16 +1514,16 @@
        "21     TOR  201810190TOR       TOR              1\n",
        "28     CLE  201810170TOR       TOR              0\n",
        "...    ...           ...       ...            ...\n",
-       "69899  IND  202012230IND       IND              1\n",
-       "69906  MIA  202012230ORL       ORL              0\n",
-       "69913  ORL  202012230ORL       ORL              1\n",
-       "69920  SAS  202012230MEM       MEM              0\n",
-       "69927  MEM  202012230MEM       MEM              1\n",
+       "69997  MEM  202105190MEM       MEM              1\n",
+       "70004  MEM  202105210GSW       GSW              0\n",
+       "70012  GSW  202105210GSW       GSW              1\n",
+       "70020  MEM  202008150POR       POR              0\n",
+       "70027  POR  202008150POR       POR              1\n",
        "\n",
-       "[9902 rows x 4 columns]"
+       "[9916 rows x 4 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,16 +1534,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5131, 6)"
+       "(5133, 5)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1554,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1566,7 +1566,7 @@
        "       'POR', 'HOU', 'OKC'], dtype=object)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
        "       'MIA', 'LAL', 'MEM'], dtype=object)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1638,21 +1638,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 10059 entries, 117 to 10176\n",
+      "Int64Index: 10066 entries, 117 to 10183\n",
       "Data columns (total 9 columns):\n",
       " #   Column         Non-Null Count  Dtype         \n",
       "---  ------         --------------  -----         \n",
-      " 0   home_abbv      10059 non-null  object        \n",
-      " 1   away_abbv      10059 non-null  object        \n",
-      " 2   date           10059 non-null  datetime64[ns]\n",
-      " 3   game_id        10059 non-null  object        \n",
-      " 4   season         10059 non-null  object        \n",
-      " 5   game_code      10059 non-null  object        \n",
-      " 6   team           10052 non-null  object        \n",
-      " 7   home_team      10052 non-null  object        \n",
-      " 8   home_team_bin  10052 non-null  float64       \n",
+      " 0   home_abbv      10066 non-null  object        \n",
+      " 1   away_abbv      10066 non-null  object        \n",
+      " 2   date           10066 non-null  datetime64[ns]\n",
+      " 3   game_id        10066 non-null  object        \n",
+      " 4   season         10066 non-null  object        \n",
+      " 5   game_code      10066 non-null  object        \n",
+      " 6   team           10066 non-null  object        \n",
+      " 7   home_team      10066 non-null  object        \n",
+      " 8   home_team_bin  10066 non-null  float64       \n",
       "dtypes: datetime64[ns](1), float64(1), object(7)\n",
-      "memory usage: 785.9+ KB\n"
+      "memory usage: 786.4+ KB\n"
      ]
     }
    ],
@@ -1861,17 +1861,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bball_merged = check_reference.merge(df_gamecodes, \"left\", on=\"game_code\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>team</th>\n",
+       "      <th>game_code</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>home_team_bin</th>\n",
+       "      <th>home_abbv</th>\n",
+       "      <th>away_abbv</th>\n",
+       "      <th>date</th>\n",
+       "      <th>game_id</th>\n",
+       "      <th>season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [team, game_code, home_team, home_team_bin, home_abbv, away_abbv, date, game_id, season]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bball_merged[bball_merged.home_abbv.isnull()]"
+   ]
   },
   {
    "cell_type": "code",
