Added Sample Data for Game Dashboard

--- a/notebooks/Data Cleaning.ipynb
+++ b/notebooks/Data Cleaning.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1637,7 +1637,9 @@
    "source": [
     "shark_teams_flipper = {'CHR': 'CHO', 'SAN': 'SAS', 'GS': 'GSW', 'BKN': 'BRK', 'NY': 'NYK'}\n",
     "df_gamecodes.home_abbv = df_gamecodes.home_abbv.apply(lambda x: shark_teams_flipper[x] if x in shark_teams_flipper.keys() else x)\n",
-    "df_gamecodes.away_abbv = df_gamecodes.away_abbv.apply(lambda x: shark_teams_flipper[x] if x in shark_teams_flipper.keys() else x) "
+    "df_gamecodes.away_abbv = df_gamecodes.away_abbv.apply(lambda x: shark_teams_flipper[x] if x in shark_teams_flipper.keys() else x) \n",
+    "# Transform game_id into bball ref code \n",
+    "df_gamecodes[\"game_code\"] = (df_gamecodes.date.apply(dt.datetime.strftime, format=\"%Y%m%d0\")) + df_gamecodes.home_abbv"
    ]
   },
   {
@@ -1645,10 +1647,7 @@
    "execution_count": 205,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Transform game_id into bball ref code \n",
-    "df_gamecodes[\"game_code\"] = (df_gamecodes.date.apply(dt.datetime.strftime, format=\"%Y%m%d0\")) + df_gamecodes.home_abbv"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -5937,6 +5936,215 @@
     "line_chart_sample_df.to_csv(\"../data/interim/line_chart_sample.csv\", index=False)\n",
     "results_df.to_csv(\"../data/interim/results_sample.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sunday"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = sql.create_engine(connection_str)\n",
+    "conn = engine.connect()\n",
+    "df_odds = pd.read_sql(\"select * from odds\", con=conn, index_col=\"id\")\n",
+    "df_time = pd.read_sql(\"select * from time\", con=conn, index_col=\"id\", parse_dates=\"timestamp\")\n",
+    "df_gamecodes = pd.read_sql(\"select * from gamecodes\", con=conn, index_col=\"id\", parse_dates=\"date\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def seasoner(date):\n",
+    "    if date <= dt.datetime(2018, 6, 8):\n",
+    "        return \"17-18\"\n",
+    "    elif date <= dt.datetime(2019, 6, 13):\n",
+    "        return \"18-19\"\n",
+    "    elif date <= dt.datetime(2020, 10, 11):\n",
+    "        return \"19-20\"\n",
+    "    elif date <= dt.datetime(2021, 7, 21):\n",
+    "        return \"20-21\"\n",
+    "    else:\n",
+    "        return \"21-22\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abbv_regex = re.compile(\"[A-Z]{3}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_gamecodes[\"season\"] = df_gamecodes.date.apply(seasoner)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine_2 = sql.create_engine(\"sqlite:///../data/interim/NBA.db\")\n",
+    "conn_2 = engine_2.connect()\n",
+    "df_player_basic= pd.read_sql(\"SELECT * FROM basic_stats WHERE name = 'Team Totals' AND timetype = 'TotalBasics'\", con=conn_2)\n",
+    "df_player_advanced = pd.read_sql(\"SELECT * FROM advanced_stats WHERE name = 'Team Totals'\", con=conn_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_player_basic[\"home_team\"] = df_player_basic.game_code.apply(lambda x: abbv_regex.search(x)[0])\n",
+    "df_player_basic[\"home_team_bin\"] = (df_player_basic[\"team\"] == df_player_basic[\"home_team\"]).astype(\"int32\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shark_teams_flipper = {'CHR': 'CHO', 'SAN': 'SAS', 'GS': 'GSW', 'BKN': 'BRK', 'NY': 'NYK'}\n",
+    "df_gamecodes.home_abbv = df_gamecodes.home_abbv.apply(lambda x: shark_teams_flipper[x] if x in shark_teams_flipper.keys() else x)\n",
+    "df_gamecodes.away_abbv = df_gamecodes.away_abbv.apply(lambda x: shark_teams_flipper[x] if x in shark_teams_flipper.keys() else x) \n",
+    "# Transform game_id into bball ref code \n",
+    "df_gamecodes[\"game_code\"] = (df_gamecodes.date.apply(dt.datetime.strftime, format=\"%Y%m%d0\")) + df_gamecodes.home_abbv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pts_and_possessions = possessionCalculator(df_player_basic).loc[:, [\"team\", \"game_possessions\", \"game_code\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_player_basic_w_pace = df_player_basic.merge(pts_and_possessions, on=[\"game_code\", \"team\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game_results_df = df_player_basic_w_pace.merge(df_player_advanced, on=[\"game_code\", \"team\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_odds\n",
+    "df_gamecodes\n",
+    "df_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
